# l5-interface

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/workload_drafts/: 0d691cdd-c900-4aeb-ae94-157cac0c2d68.json  b3aa27b1-f032-4c48-badd-0ac5d6a109ee.json  bfdfef9d-b855-43e5-9d59-8608fb5ba662.json  e6ec9f91-f52f-4afb-a627-970de305bd5e.json
scripts/: run_python.ps1  run_python.sh  run_textual.ps1  run_textual.sh  run_textual_dev.ps1  run_textual_dev.sh
src/: __init__.py  __main__.py  app.py
src/backend/: __init__.py
src/backend/cloud/: __init__.py  instance_manager.py  spot_fleet.py  workload_manager.py
src/backend/data/: __init__.py  availability_data.py  carbon_data.py  data_freshness.py
src/backend/forecasting/: carbon_forecast.py  forecast_manager.py
src/backend/notifications/: __init__.py  email_notifier.py  notification_manager.py
src/backend/runtime/: __init__.py  bayesian_models.py  predictor.py  profiling.py
src/backend/scheduling/: __init__.py  pareto_algorithm.py  rescheduling.py  risk_modes.py  scheduler.py
src/config/: __init__.py  defaults.py  profiles.py  settings.py
src/models/: __init__.py  carbon_intensity.py  fleet.py  forecast.py  profile.py  schedule.py  workload.py  workload_config.py
src/storage/: __init__.py  config_store.py  local_json_workload_config_repository.py  storage_manager.py  workload_config_repository.py  workload_store.py
src/ui/: __init__.py  app.py  messages.py
src/ui/screens/: __init__.py  execution_overview_screen.py  (+3 more)
src/utils/: __init__.py  formatting.py  time_utils.py  validation.py
(+66 files in other folders)
