[tool.poetry]
name = "l5-interface"
version = "0.0.0"
description = "Textual CLI interface for carbon-, application-, and availability-aware scheduling"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.50.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
